# secret-scanner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  detector.rs  main.rs  scanner.rs
src/output/: json.rs  mod.rs  sarif.rs  terminal.rs
src/rules/: builtin.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: clean.env
